--- a/dryer_current.yaml
+++ b/dryer_current.yaml
@@ -1,7 +1,7 @@
 esphome:
   name: dryer_current
   platform: ESP8266
-  board: esp01_1m
+  board: d1_mini
   includes:
     - currentsensor.h
   libraries:
